--- a/PhotoAlbumViewer/OtherEvents.html
+++ b/PhotoAlbumViewer/OtherEvents.html
@@ -243,7 +243,7 @@ opacity: 0.3;
 
 <div class="footer">
     <div class="caption" id="caption"></div>
-    <div class="copyright">ⓒ 2024 B STUDIO PRODUCTION</div>
+    <div class="copyright">ⓒ 2024-2025 B STUDIO PRODUCTION</div>
     <span class="material-symbols-outlined" id="downloadButton" onclick="downloadPhoto()" style="position: absolute; right: 20px; top: 20px; cursor: pointer; font-size: 24px; color: white;">download</span>
 <span class="material-symbols-outlined" id="fullScreenButton" onclick="toggleFullScreen()" 
       style="position: absolute; left: 20px; top: 20px; cursor: pointer; font-size: 24px; color: white;">
@@ -534,3 +534,4 @@ document.addEventListener('contextmenu', event => event.preventDefault());
     </script>
 </body>
 </html>
+
