--- a/BoatOat1stFMinTaipei/BenefitsCheck.html
+++ b/BoatOat1stFMinTaipei/BenefitsCheck.html
@@ -274,7 +274,7 @@ const languageMap = {
         soundcheckLabel: "Sound Check",
         polaroidLabel: "Polaroid",
         fansignLabel: "FanSign (Poster)",
-        signedposterLabel: "Pre-Signed Poster:",
+        signedposterLabel: "Pre-Signed Poster",
         photocardLabel: "Photo Card",
         placeholders: {
             row: "Enter row number",
@@ -447,3 +447,4 @@ ${rows[i][28] || rows[i][29] ? `
     </script>
 </body>
 </html>
+
