--- a/BoatOat1stFMinTaipei/BenefitsCheck.html
+++ b/BoatOat1stFMinTaipei/BenefitsCheck.html
@@ -429,10 +429,10 @@ ${rows[i][28] || rows[i][29] ? `
 <div class="download-buttons">
     <div class="button-container" style="margin-top:0px;">
         ${rows[i][28] ? `<a href="${rows[i][28]}" download target="_blank"><button class="download-button">
-            <span class="material-symbols-outlined">photo_camera_front</span> 1
+            <span class="material-symbols-outlined">download</span> 1
         </button></a>` : ''}
         ${rows[i][29] ? `<a href="${rows[i][29]}" download target="_blank"><button class="download-button">
-            <span class="material-symbols-outlined">photo_camera_front</span> 2
+            <span class="material-symbols-outlined">download</span> 2
         </button></a>` : ''}
     </div>
 </div>
@@ -477,4 +477,5 @@ ${rows[i][31] ? `
     </script>
 </body>
 </html>
+
 
