--- a/PhotoAlbumViewer/BoatOat1stFMinTaipei.html
+++ b/PhotoAlbumViewer/BoatOat1stFMinTaipei.html
@@ -211,7 +211,7 @@ opacity: 0.3;
         <div>
             <label for="albumSelect">Album: </label>
             <select id="albumSelect" onchange="selectAlbum()">
-                <option value="BoatOat 1st Fan Meeting in Taipei - Event">Announcement</option>
+                <option value="BoatOat 1st Fan Meeting in Taipei - Event">Event</option>
 <option value="BoatOat 1st Fan Meeting in Taipei - Fan Benefits">Fan Benefits</option>
             </select>
         </div>
@@ -529,4 +529,5 @@ document.addEventListener('contextmenu', event => event.preventDefault());
     </script>
 </body>
 </html>
+
 
