--- a/BoatOat1stFMinTaipei/BenefitsCheck.html
+++ b/BoatOat1stFMinTaipei/BenefitsCheck.html
@@ -416,7 +416,7 @@ ${rows[i][30] ? `
     <div class="button-container" style="margin-top:0px;">
         <a href="${rows[i][30]}" download target="_blank">
             <button class="download-button">
-                <span class="material-symbols-outlined">videocam</span> 1
+                <span class="material-symbols-outlined">download</span> 1
             </button>
         </a>
     </div>
@@ -447,7 +447,7 @@ ${rows[i][31] ? `
     <div class="button-container" style="margin-top:0px;">
         <a href="${rows[i][31]}" download target="_blank">
             <button class="download-button">
-                <span class="material-symbols-outlined">videocam</span> 1
+                <span class="material-symbols-outlined">download</span> 1
             </button>
         </a>
     </div>
@@ -477,5 +477,6 @@ ${rows[i][31] ? `
     </script>
 </body>
 </html>
+
 
 
